<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FragmentFour">
    <TableRow
        android:layout_marginTop="6dp"
        android:layout_marginLeft="12dp"

        >
    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="12sp"

        android:text="@string/based_on_your_available_ingredients"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="14dp"
            app:cardElevation="6dp"
            app:strokeWidth="1dp"
            app:cardBackgroundColor="#FDF4FB"
            app:strokeColor="#DDDDDD">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:queryHint="Search recipes..."
                    android:iconifiedByDefault="false" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </TableRow>


    <TableRow
    android:id="@+id/Group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/all"
            style="@style/FilterBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnQuick"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:text="@string/quick"
            android:layout_marginEnd="2dp"
            style="@style/FilterBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVeg"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/vegetarian"
            style="@style/FilterBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnProtein"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:text="@string/protein"
            style="@style/FilterBtn" />
    </TableRow>

    <TableRow
        android:layout_margin="10dp">
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recViewRecipes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

    </TableRow>

    <!-- or change to match_parent -->


</TableLayout>