<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_pantry"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="#2E7D32"
            android:tint="@color/white"
            android:contentDescription="@string/add_item_description"
            app:srcCompat="@android:drawable/ic_input_add"
            app:useCompatPadding="true"
            app:fabSize="normal"
            android:elevation="6dp"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_items_bar"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        android:background="@android:drawable/edit_text"
        android:inputType="text"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_pantry"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="12dp"/>

</LinearLayout>

