<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="14dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp">

        <CheckBox
            android:id="@+id/cb_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/cb_done"
            android:layout_toStartOf="@id/btn_delete"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_shopping_item_name"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_item_meta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_shopping_added_item_info"
                android:textSize="13sp"
                android:alpha="0.8"
                android:paddingTop="4dp"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/item_shopping_delete_btn"
            android:src="@android:drawable/ic_menu_delete"
            app:tint="#B00020"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>
